# celeste

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md
assets/: levels.ldtk  test.ldtk  weather.wgsl
assets/shaders/: weather.wgsl
assets/textures/: terrain.aseprite
src/: camera.rs  common.rs  level.rs  main.rs  movement.rs  player.rs  state_machine.rs  statemachine.rs  ui.rs  weather.rs
